--- a/home.html
+++ b/home.html
@@ -159,9 +159,9 @@
             <div>
                 <div class="row row-cols-1 row-cols-lg-3 gx-lg-5 mb-lg-5 gy-4 mb-3">
                     <div class="col">
-                        <div class="card text-white rounded-4 border-1">
+                        <div class="card text-white rounded-4 border-1 h-100">
                             <img class="image-transition rounded-top-4" src="./ziper-images/dog01.png" onmouseover="this.src=' ./ziper-images/dog01-hover-1.png ';" onmouseout="this.src='./ziper-images/dog01.png';">
-                            <div class="card-body text-dark">
+                            <div class="card-body text-dark h-100">
                                 <h3 class="card-title">等家中-華仔</h3>
                                 <p class="card-text">目前7個月大的華仔，是個愛笑的貪吃鬼，喜歡吃西瓜還有蓮霧，是一隻吃素的乖狗狗，會挑食不喜歡...</p>
                             </div>
@@ -171,9 +171,9 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card text-white rounded-4 border-1">
+                        <div class="card text-white rounded-4 border-1 h-100">
                             <img class="image-transition rounded-top-4" src="./ziper-images/04.png" onmouseover="this.src=' ./ziper-images/dog01-hover.png ';" onmouseout="this.src=' ./ziper-images/04.png';">
-                            <div class="card-body text-dark">
+                            <div class="card-body text-dark h-100">
                                 <h3 class="card-title">等家中-小呆</h3>
                                 <p class="card-text">小呆有著圓圓的大眼睛，一歲的他來自台中，原本陪著一位老奶奶生活，上個月奶奶行動不便不能再陪....</p>
                             </div>
@@ -183,9 +183,9 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card text-white rounded-4 border-1">
+                        <div class="card text-white rounded-4 border-1 h-100">
                             <img class="image-transition rounded-top-4" src="./ziper-images/08.png" onmouseover="this.src=' ./ziper-images/dog01-hover-2.png';" onmouseout="this.src=' ./ziper-images/08.png';">
-                            <div class="card-body text-dark">
+                            <div class="card-body text-dark h-100">
                                 <h3 class="card-title">等家中-Snow</h3>
                                 <p class="card-text">看起來很兇但特別怕打雷的Snow，很喜歡吃冰，冰冰的水也喜歡，如果摸他的額頭會發出吹口哨的聲...</p>
                             </div>
